Recovered the optknock

--- a/7_Gene_Optimization.ipynb
+++ b/7_Gene_Optimization.ipynb
@@ -321,7 +321,7 @@
     "import cameo\n",
     "from cameo.strain_design import OptGene #Imports the optgene packages\n",
     "\n",
-    "%run 2021_11_02_Psilocybin_in_Cg.ipynb #Runs our model where we inserted the different reactions and metabolites"
+    "%run 1._Add_Psilocybin_to_Coynebacterium_Model.ipynb #Runs our model where we inserted the different reactions and metabolites"
    ]
   },
   {
@@ -650,7 +650,148 @@
    "id": "0f5f4a7c-24db-4b48-ba35-9b397d052669",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "OptGene?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce29350e-7502-4c93-8a5e-871eb46f6f60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#trying something else: --> https://github.com/biosustain/cameo-notebooks/blob/master/other/Gene%20Knockout%20Single%20Objective.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "620cc5a8-b8ee-4e3e-a956-09f122b8a5ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import time\n",
+    "from random import Random\n",
+    "\n",
+    "from cameo.strain_design.heuristic import GeneKnockoutOptimization\n",
+    "from cameo import load_model\n",
+    "#from cameo.strain_design.heuristic.objective_functions import biomass_product_coupled_yield\n",
+    "\n",
+    "from cameo.flux_analysis.simulation import fba\n",
+    "import inspyred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f69f74b4-804a-49a8-88b2-3d7b6564bfe5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# found here: https://github.com/biosustain/cameo-notebooks/blob/master/other/12-advanced-usage-of-heuristic-optimization.ipynb\n",
+    "from cameo import config\n",
+    "config.default_view = config.SequentialView()\n",
+    "from pandas import options\n",
+    "options.display.max_rows = 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48470cd6-2099-490b-a441-84394077f788",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cameo import models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f823a24-5046-4dc1-bad2-b83fd9cf63c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cameo.strain_design.heuristic.evolutionary.objective_functions import biomass_product_coupled_yield\n",
+    "of = biomass_product_coupled_yield(model.reactions.CG_biomass_cgl_ATCC13032,\n",
+    "                                   model.reactions.psiM2,\n",
+    "                                   model.reactions.EX_glc_e)\n",
+    "of"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a38abe3-d882-426b-9e4d-b21afd38f17d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cameo.strain_design.heuristic.evolutionary.objective_functions import product_yield, number_of_knockouts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71933c47-678e-4075-bac4-9d29e524cb89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cameo.strain_design.heuristic.evolutionary import GeneKnockoutOptimization\n",
+    "ko = GeneKnockoutOptimization(model=model, objective_function=of)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6aafe8a7-97b7-485e-9fd6-b33ee86594c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res1 = ko.run(max_evaluations=15000, view=config.default_view)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bfd5936-f3f7-4d5a-8a49-cc20e62592f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38f2416f-d6a0-4fbe-bd71-655796f06e9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --> no results with advanced-usage-of-heuristic-optimization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6dfd647-569e-4109-9f83-695d14e2faca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cameo.strain_design.deterministic.linear_programming import OptKnock\n",
+    "optknock = OptKnock(model, fraction_of_optimum=0.1)\n",
+    "result = optknock.run(max_knockouts=1, target=\"psiM2\", biomass=\"CG_biomass_cgl_ATCC13032\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33cd88c9-7f20-495a-b774-9a73cd2ab401",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#--> no result here as well :("
+   ]
   }
  ],
  "metadata": {
